--- a/about.html
+++ b/about.html
@@ -12,6 +12,12 @@
 
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
+    
+    <meta property="og:title" content="Bruno Brandão Portfolio" />
+
+
+    <meta property="og:image" content="img\a glimpse of divinity.jpg" />
+
 </head>
 
 <body>
@@ -20,9 +26,9 @@
 
 
         <div class="divnav">
+            <a href="index.html">home</a>
             <a href="work.html">work</a>
-            <a href="about.html">about</a>
-            <a href="shop.html">shop</a>
+            <a href="contact.html">contact</a>
 
         </div>
 
